Make Pathname.init() static method
Running under Netbeans, but failing to enumerate jar pathnames in the
Java tests.
* * *
Moved (most) Pathname.truename() invocations to using symbols

Changed a lot of use of PROBE-FILE over TRUENAME.

Running under Netbeans, but can't probe-file on jar locations:

  (probe-file "jar:file:/opt/local/share/java/abcl/abcl.jar!/org/armedbear/lisp/")
  (probe-file "jar:file:/opt/local/share/java/abcl/abcl.jar!/org/armedbear/lisp/boot.lisp")
* * *
INCOMPLETE Overhaul ZipCache to give linear access to PathnameURL keys

TODO: comprehensive multi-level cache design that will plausibly work
* * *
Compiling!

Loading from boot jar not working.

Reading all the jar entries into the entry cache at once is not a good
idea.  For abcl.jar this is ~10k entries which takes a noticable
amount of time.

And PathnameJar does not implement the right equals() contract, so
looking up the entry in the cache doesn't work either.
* * *
Running from abcl.jar!

Not loading in contribs…
* * *
Good progress: able to load from abcl.jar.

Failing to bootstrap contrib due to the following errors.
**** TODO Failing to distinguish that org/armedbear/lisp/java *doesn't* name a directory
I thought ZIP files did not suffix directories with a slash?
* * *
DIRECTORY partly working for jar archives

But

  (directory "jar:file:~/work/abcl/dist/abcl.jar!/*")

returns all contents of the jar.
* * *
Use java.net.URI to encode namestrings